--- a/okto-order-service/build.gradle
+++ b/okto-order-service/build.gradle
@@ -25,6 +25,9 @@ dependencies {
     implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.24'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-netflix-eureka-client
+    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-eureka-client', version: '3.0.3'
 }
 
 test {
