--- a/okto-order-service/src/main/resources/application.yml
+++ b/okto-order-service/src/main/resources/application.yml
@@ -14,6 +14,12 @@ spring:
     show-sql: true
     database: POSTGRESQL
     generate-ddl: true
+  application:
+    name: okto-order-service
 
 server:
-  port: 8081
+  port: 0
+
+eureka:
+  instance:
+    instance-id: ${spring.application.name}:${random.uuid}
