--- a/okto-product-service/src/main/resources/bootstrap.yml
+++ b/okto-product-service/src/main/resources/bootstrap.yml
@@ -7,13 +7,15 @@ spring:
   cloud:
     config:
       uri: http://localhost:8888
-management:
-  endpoints:
-    web:
-      exposure:
-        include=*:
+
 server:
   port: 0
 eureka:
   instance:
     instance-id: ${spring.application.name}:${random.uuid}
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
