--- a/okto-order-service/src/main/resources/bootstrap.yml
+++ b/okto-order-service/src/main/resources/bootstrap.yml
@@ -2,3 +2,8 @@ spring:
   cloud:
     config:
       uri: http://localhost:8888
+  rabbitmq:
+    host: localhost
+    port: 15672
+    username: guest
+    password: guest
