--- a/okto-product-service/build.gradle
+++ b/okto-product-service/build.gradle
@@ -33,6 +33,9 @@ dependencies {
     implementation group: 'org.springframework.cloud', name: 'spring-cloud-config-client', version: '3.0.4'
     // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-bootstrap
     implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap', version: '3.0.4'
+    // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-bus-amqp
+    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bus-amqp', version: '3.0.3'
+
 
 
 }
