--- a/okto-product-service/src/main/resources/bootstrap.yml
+++ b/okto-product-service/src/main/resources/bootstrap.yml
@@ -7,6 +7,11 @@ spring:
   cloud:
     config:
       uri: http://localhost:8888
+  rabbitmq:
+    host: localhost
+    port: 15672
+    username: guest
+    password: guest
 
 server:
   port: 0
