--- a/okto-product-service/src/main/resources/bootstrap.yml
+++ b/okto-product-service/src/main/resources/bootstrap.yml
@@ -9,9 +9,14 @@ spring:
       uri: http://localhost:8888
   rabbitmq:
     host: localhost
-    port: 15672
+    port: 5672
     username: guest
     password: guest
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:8180/auth/realms/okto-microservices-realm
 
 server:
   port: 0
