Default configuration for inventory service

--- a/okto-inventory-service/build.gradle
+++ b/okto-inventory-service/build.gradle
@@ -28,7 +28,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.cloud:spring-cloud-config-server'
+    // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-config-client
+    implementation group: 'org.springframework.cloud', name: 'spring-cloud-config-client', version: '3.0.4'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'org.postgresql:postgresql'
@@ -36,12 +37,14 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
 
-    // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-bus
-    implementation group: 'org.springframework.cloud', name: 'spring-cloud-bus', version: '3.0.3'
+    // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-bus-amqp
+    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bus-amqp', version: '3.0.3'
     // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-vault-config
     implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-vault-config', version: '3.0.3'
     // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-bootstrap
     implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap', version: '3.0.3'
+    // https://mvnrepository.com/artifact/org.springframework.security/spring-security-oauth2-jose
+    implementation group: 'org.springframework.security', name: 'spring-security-oauth2-jose', version: '5.6.0'
 
 }
 
