--- a/okto-order-service/build.gradle
+++ b/okto-order-service/build.gradle
@@ -34,6 +34,9 @@ dependencies {
     implementation group: 'org.springframework.cloud', name: 'spring-cloud-config-client', version: '3.0.4'
     // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-bootstrap
     implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap', version: '3.0.4'
+    // https://mvnrepository.com/artifact/org.springframework.security/spring-security-oauth2-jose
+    implementation group: 'org.springframework.security', name: 'spring-security-oauth2-jose', version: '5.6.0'
+
 
 }
 
