--- a/okto-api-gateway/src/main/resources/application.yml
+++ b/okto-api-gateway/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  application:
+    name: okto-api-gateway
   cloud:
     gateway:
       discovery:
@@ -12,7 +14,7 @@ spring:
       routes[1]:
         id: okto-order-service
         predicates[0]: Path=/api/order
-        uri: lb://order-service
+        uri: lb://okto-order-service
       default-filters: TokenRelay
     loadbalancer:
       ribbon:
@@ -32,9 +34,8 @@ spring:
             redirect-uri: http://localhost:8080/login/oauth2/code/spring-cloud-gateway-client
       resourceserver:
         jwt:
-          jwk-set-uri: http://localhost:8180/auth/realms/microservices-realm/protocol/openid-connect/certs
-  application:
-    name: okto-api-gateway
+          jwk-set-uri: http://localhost:8180/auth/realms/okto-microservices-realm/protocol/openid-connect/certs
+
 eureka:
   instance:
     instance-id: ${spring.application.name}-${random.uuid}
