--- a/okto-inventory-service/src/main/resources/bootstrap.yml
+++ b/okto-inventory-service/src/main/resources/bootstrap.yml
@@ -2,15 +2,15 @@ spring:
   application:
     name: okto-inventory-service
   cloud:
+    config:
+      uri: http://localhost:8888
     vault:
       scheme: http
       authentication: TOKEN
       host: localhost
-      token: s.Ji9POTZgZR6ZNFc2cizx6ZQf
+      token: s.QOrJ9smB9VLbDGEtIf6D8M3E
       port: '8200'
-      application-name: inventory-service
-    config:
-      uri: http://localhost:8888
+      application-name: ${spring.application.name}
   rabbitmq:
     password: guest
     port: '5672'
