--- a/okto-order-service/build.gradle
+++ b/okto-order-service/build.gradle
@@ -36,14 +36,18 @@ dependencies {
     implementation group: 'org.springframework.cloud', name: 'spring-cloud-config-client', version: '3.0.4'
     // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-bootstrap
     implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap', version: '3.0.4'
-//    // https://mvnrepository.com/artifact/org.springframework.security/spring-security-oauth2-jose
-//    implementation group: 'org.springframework.security', name: 'spring-security-oauth2-jose', version: '5.6.0'
-//    // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-feign
-//    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-feign', version: '1.4.7.RELEASE'
+    // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-bus-amqp
+    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bus-amqp', version: '3.0.3'
+    // https://mvnrepository.com/artifact/org.springframework.security/spring-security-oauth2-jose
+    implementation group: 'org.springframework.security', name: 'spring-security-oauth2-jose', version: '5.6.0'
+    // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-feign
+    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-feign', version: '1.4.7.RELEASE'
 //    // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-circuitbreaker-resilience4j
 //    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-circuitbreaker-resilience4j', version: '2.0.2'
 //    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security
 //    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.6.0'
+    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-oauth2-resource-server
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-resource-server', version: '2.5.6'
 
 }
 
