--- a/okto-order-service/src/main/resources/bootstrap.yml
+++ b/okto-order-service/src/main/resources/bootstrap.yml
@@ -1,6 +1,11 @@
 spring:
   application:
     name: okto-order-service
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:8180/auth/realms/okto-microservices-realm
   datasource:
     url: jdbc:postgresql://localhost:5432/okto_dev
   jpa:
@@ -22,7 +27,7 @@ spring:
       port: 8200
       scheme: http
       authentication: TOKEN
-      token: s.x9mQwmRnqoZjYQKjR7UacL89
+      token: s.VtPHFCjzQh94YIHXvJYV4Cx3
       application-name: okto-order-service
     loadbalancer:
       ribbon:
