--- a/okto-inventory-service/build.gradle
+++ b/okto-inventory-service/build.gradle
@@ -46,6 +46,11 @@ dependencies {
     // https://mvnrepository.com/artifact/org.springframework.security/spring-security-oauth2-jose
     implementation group: 'org.springframework.security', name: 'spring-security-oauth2-jose', version: '5.6.0'
 
+    // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-sleuth
+    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-sleuth', version: '3.1.0'
+    // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-sleuth-zipkin
+    implementation group: 'org.springframework.cloud', name: 'spring-cloud-sleuth-zipkin', version: '3.1.0'
+
 }
 
 dependencyManagement {
