--- a/okto-inventory-service/src/main/resources/bootstrap.yml
+++ b/okto-inventory-service/src/main/resources/bootstrap.yml
@@ -13,7 +13,7 @@ spring:
       scheme: http
       authentication: TOKEN
       host: localhost
-      token: s.jo9iWFfBUG2FlShk8aip2bvV
+      token: s.etnjEpAqT4oRy8gaGjQYitwA
       port: '8200'
       application-name: ${spring.application.name}
   rabbitmq:
@@ -21,6 +21,15 @@ spring:
     port: '5672'
     host: localhost
     username: guest
+  sleuth:
+    circuitbreaker:
+      enabled: 'false'
+    integration:
+      enabled: 'true'
+    sampler:
+      probability: 1
+    zipkin:
+      base-url: http://localhost:9411/
 
 management:
   endpoints:
