--- a/okto-notification-service/build.gradle
+++ b/okto-notification-service/build.gradle
@@ -33,6 +33,11 @@ dependencies {
 	// https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-stream-binder-rabbit
 	implementation group: 'org.springframework.cloud', name: 'spring-cloud-stream-binder-rabbit', version: '3.1.4'
 
+	// https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-sleuth
+	implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-sleuth', version: '3.1.0'
+	// https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-sleuth-zipkin
+	implementation group: 'org.springframework.cloud', name: 'spring-cloud-sleuth-zipkin', version: '3.1.0'
+
 }
 
 dependencyManagement {
