--- a/okto-order-service/build.gradle
+++ b/okto-order-service/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.springframework.boot' version '2.5.6'
+    id 'org.springframework.boot' version '2.6.1'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
 }
@@ -27,26 +27,26 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
     // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-vault-config
-    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-vault-config', version: '3.0.3'
+    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-vault-config', version: '3.1.0'
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-actuator
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: '2.5.6'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: '2.6.4'
     // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-netflix-eureka-client
-    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-eureka-client', version: '3.0.3'
+    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-eureka-client', version: '3.1.0'
     // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-config-client
-    implementation group: 'org.springframework.cloud', name: 'spring-cloud-config-client', version: '3.0.4'
+    implementation group: 'org.springframework.cloud', name: 'spring-cloud-config-client', version: '3.1.0'
     // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-bootstrap
-    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap', version: '3.0.4'
+    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap', version: '3.1.0'
     // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-bus-amqp
-    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bus-amqp', version: '3.0.3'
-//    // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-feign
-//    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-feign', version: '1.4.7.RELEASE'
+    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bus-amqp', version: '3.1.0'
+////    // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-feign
+////    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-feign', version: '1.4.7.RELEASE'
     // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-openfeign
-    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '3.0.5'
+    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '3.1.0'
 
     // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-circuitbreaker-resilience4j
-    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-circuitbreaker-resilience4j', version: '2.0.2'
-//    // https://mvnrepository.com/artifact/org.springframework.security/spring-security-oauth2-resource-server
-//    implementation group: 'org.springframework.security', name: 'spring-security-oauth2-resource-server', version: '5.5.2'
+    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-circuitbreaker-resilience4j', version: '2.1.0'
+////    // https://mvnrepository.com/artifact/org.springframework.security/spring-security-oauth2-resource-server
+////    implementation group: 'org.springframework.security', name: 'spring-security-oauth2-resource-server', version: '5.5.2'
     // https://mvnrepository.com/artifact/org.springframework.security/spring-security-oauth2-jose
     implementation group: 'org.springframework.security', name: 'spring-security-oauth2-jose', version: '5.6.0'
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security
@@ -54,7 +54,10 @@ dependencies {
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-oauth2-resource-server
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-resource-server', version: '2.5.6'
 
-
+    // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-sleuth
+    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-sleuth', version: '3.1.0'
+    // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-sleuth-zipkin
+    implementation group: 'org.springframework.cloud', name: 'spring-cloud-sleuth-zipkin', version: '3.1.0'
 }
 
 test {
