--- a/okto-order-service/src/main/resources/bootstrap.yml
+++ b/okto-order-service/src/main/resources/bootstrap.yml
@@ -8,6 +8,8 @@ spring:
           issuer-uri: http://localhost:8180/auth/realms/okto-microservices-realm
   datasource:
     url: jdbc:postgresql://localhost:5432/okto_dev
+    username: university
+    password: mlpoiujk09
   jpa:
     properties:
       hibernate:
@@ -27,7 +29,7 @@ spring:
       port: 8200
       scheme: http
       authentication: TOKEN
-      token: s.jo9iWFfBUG2FlShk8aip2bvV
+      token: s.etnjEpAqT4oRy8gaGjQYitwA
       application-name: okto-order-service
     loadbalancer:
       ribbon:
@@ -42,6 +44,15 @@ spring:
     port: 5672
     username: guest
     password: guest
+  sleuth:
+    circuitbreaker:
+      enabled: 'false'
+    integration:
+      enabled: 'true'
+    sampler:
+      probability: 1
+  zipkin:
+    base-url: http://localhost:9411/
 
 management:
   endpoints:
