--- a/okto-api-gateway/src/main/resources/application.yml
+++ b/okto-api-gateway/src/main/resources/application.yml
@@ -40,3 +40,6 @@ spring:
 eureka:
   instance:
     instance-id: ${spring.application.name}-${random.uuid}
+  client:
+    fetchRegistry: 'false'
+    registerWithEureka: 'false'
