--- a/okto-api-gateway/src/main/resources/application.yml
+++ b/okto-api-gateway/src/main/resources/application.yml
@@ -40,6 +40,10 @@ spring:
 eureka:
   instance:
     instance-id: ${spring.application.name}-${random.uuid}
+    hostname: 127.0.0.1
+    prefer-ip-address: true
   client:
-    fetchRegistry: 'false'
-    registerWithEureka: 'false'
+    fetchRegistry: 'true'
+    registerWithEureka: 'true'
+    service-url:
+      defaultZone: ${eureka_url:http://127.0.0.1:8761/eureka}
