--- a/okto-order-service/build.gradle
+++ b/okto-order-service/build.gradle
@@ -26,8 +26,8 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
-    // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-vault-config
-    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-vault-config', version: '3.1.0'
+//    // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-vault-config
+//    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-vault-config', version: '3.1.0'
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-actuator
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: '2.6.4'
     // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-netflix-eureka-client
@@ -36,8 +36,8 @@ dependencies {
     implementation group: 'org.springframework.cloud', name: 'spring-cloud-config-client', version: '3.1.0'
     // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-bootstrap
     implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap', version: '3.1.0'
-    // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-bus-amqp
-    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bus-amqp', version: '3.1.0'
+//    // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-bus-amqp
+//    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bus-amqp', version: '3.1.0'
 ////    // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-feign
 ////    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-feign', version: '1.4.7.RELEASE'
     // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-openfeign
@@ -54,10 +54,10 @@ dependencies {
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-oauth2-resource-server
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-resource-server', version: '2.5.6'
 
-    // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-sleuth
-    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-sleuth', version: '3.1.0'
-    // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-sleuth-zipkin
-    implementation group: 'org.springframework.cloud', name: 'spring-cloud-sleuth-zipkin', version: '3.1.0'
+//    // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-sleuth
+//    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-sleuth', version: '3.1.0'
+//    // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-sleuth-zipkin
+//    implementation group: 'org.springframework.cloud', name: 'spring-cloud-sleuth-zipkin', version: '3.1.0'
 }
 
 test {
