--- a/okto-api-gateway/build.gradle
+++ b/okto-api-gateway/build.gradle
@@ -28,6 +28,9 @@ dependencies {
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-oauth2-resource-server
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-resource-server', version: '2.5.6'
 
+    // https://mvnrepository.com/artifact/org.web3j/core
+    implementation group: 'org.web3j', name: 'core', version: '5.0.0'
+
 }
 
 dependencyManagement {
