--- a/okto-inventory-service/src/main/resources/bootstrap.yml
+++ b/okto-inventory-service/src/main/resources/bootstrap.yml
@@ -13,7 +13,7 @@ spring:
       scheme: http
       authentication: TOKEN
       host: localhost
-      token: s.etnjEpAqT4oRy8gaGjQYitwA
+      token: hvs.owp1szyCEkdqZVqjsi4JsvOt
       port: '8200'
       application-name: ${spring.application.name}
   rabbitmq:
