--- a/okto-product-service/build.gradle
+++ b/okto-product-service/build.gradle
@@ -43,6 +43,9 @@ dependencies {
     implementation group: 'org.springframework.security', name: 'spring-security-oauth2-jose', version: '5.5.2'
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.5.5'
+
+    // https://mvnrepository.com/artifact/org.web3j/core
+    implementation group: 'org.web3j', name: 'core', version: '5.0.0'
 }
 
 test {
