--- a/okto-product-service/src/main/resources/bootstrap.yml
+++ b/okto-product-service/src/main/resources/bootstrap.yml
@@ -9,7 +9,7 @@ spring:
       port: 8200
       scheme: http
       authentication: TOKEN
-      token: s.etnjEpAqT4oRy8gaGjQYitwA
+      token: hvs.owp1szyCEkdqZVqjsi4JsvOt
       application-name: okto-product-service
   rabbitmq:
     host: localhost
